@startuml
hide empty members

namespace Structure {

class Net {
    name
    addType(typeName)
    addPlace(name, type, policy)
    addImmediateTransition(name, priority, weight)
    addTimedTransition(name, firingDistribution)
    addConstructor(name, transitionName, outputPlaceName)
    addDestructor(name, transitionName, inputPlaceName)
    addTransfer(name, transitionName, inputPlaceName, outputPlaceName)
    addTest(name, transitionName, placeName)
}

abstract class Place {
    name
    attachObserver(PlaceObserver o)
    attachObserver(PresenceObserver o)
    push(Token t)
    Token pop()
    Token peek()
}

note as placeNote
All arcs connected
to a place must have
the type of the place
end note
placeNote .. Place

class Transition{
    name
    priority
    weight
    deadline
    disabledArcCount
    attachObserver(TransitionObserver o)
    bool isEnabled()
    fire()
    incrementDisabledArcCount()
    decrementDisabledArcCount()
}
note right
isEnabled() == True iff
disabledArcCount == 0
end note

interface Condition{
    isTrue()
}

class UpdateOp {
    key
    newValue
    apply(Token t)
}

abstract class Arc {
    name
    isEnabled()
    flow()
}

class Token {
    attachObserver(TokenObserver o)
    removeObserver(TokenObserver o)
    moveTo(Place p)
    removeFrom(Place p)
}
class Tag{
    key
    value
}

interface TokenPlacer

interface PresenceObserver {
    reportNoToken()
    reportSomeToken()
}

Net *-- "*" Type: types
Net *--> "*" Place: places
Net *--> "*" Transition: transitions
Net *--> "*" Plugins.Observer: observers
Type <-- "*" Arc
Type <-- "*" Place
Place -l- "*" Token
Token *-- "*" Plugins.TokenObserver
Token *-- "*" Tag : tags
Place *-- "*" Plugins.PlaceObserver
TestArc .u.|> Arc
ConstructorArc  .u.|> Arc
DestructorArc  .u.|> Arc
Transfer  .u.|> Arc
Transition *-- "*" Arc
Transition *-- "*" Plugins.TransitionObserver
PresenceObserver "*" <-- Place : input
TestArc .d.|> PresenceObserver
ConstructorArc .d.|> TokenPlacer
DestructorArc .d.|> PresenceObserver
TokenPlacer "*" --> Place : output
Transfer  .d.|> TokenPlacer
Transfer  .d.|> PresenceObserver
FIFO .u.|> Place
LIFO .u.|> Place
TokenPlacer *--> "*" Updater : updates
Updater *--> Condition
Updater *--> UpdateOp


}

namespace Simulation {
class ESPNObserver{
    currentTime
}

class TransitionObserver

class TokenObserver {
    creationTime
    arrivalTime
}

ESPNObserver *-- "*" TransitionObserver
ESPNObserver *-- "*" TokenObserver
ESPNObserver *-- "*" PlaceObserver
ESPNObserver ..|> Plugins.Observer
TransitionObserver ..|> Plugins.TransitionObserver
TokenObserver ..|> Plugins.TokenObserver
PlaceObserver ..|> Plugins.PlaceObserver
}

namespace Plugins {
interface Observer {
    name
    PlaceObserver observe(Structure.Place p)
    TokenObserver observe(Simulation.Token t)
    TransitionObserver observe(Structure.Transition t)
}
interface PlaceObserver{
    reportArrivalOf(token)
    reportDepartureOf(token)
}
interface TokenObserver{
    reportConstruction()
    reportDestruction()
    reportArrivalAt(Structure.Place p)
    reportDepartureFrom(Structure.Place p)
}
interface TransitionObserver{
    beforeFiring()
    afterFiring()
    gotEnabled()
    gotDisabled()
}

}
@enduml